--- a/style.css
+++ b/style.css
@@ -128,6 +128,11 @@ main h2{
     text-align: center;
 }
 
+article{
+    display: block;
+    margin: auto;
+}
+
 div{
     position: relative;
     background-color: var(--cor-02);
