--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 body{
     background-color: var(--cor-04);
-    border: auto;
+
 
 }
 
@@ -34,7 +34,6 @@ header{
     background-image: linear-gradient(to bottom, var(--cor-02), var(--cor-01));
     padding: 30px;
     text-align: center;
-    margin: auto;
 }
 
 header > h1{
@@ -73,7 +72,7 @@ main{
     margin: auto;
     padding: 20px;
     padding-bottom: 30px;
-    min-width: 900px;
+    min-width: 300px;
     max-width: 1000px;
     text-align: justify;
 }
@@ -86,8 +85,6 @@ main h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: normal;
     text-align: center;
-    display: block;
-    margin: auto;
     margin-bottom: 20px;
     background-color: var(--cor-fundo-letras);
 }
@@ -97,19 +94,17 @@ main p{
     line-height: 1.6em;
     text-indent: 3em;
     text-align: justify;
-    margin: auto;
 }
 
 main strong{
     color: var(--cor-03);
     background-color: var(--cor-fundo-letras);
-    margin: auto;
+    font-weight: bold;
 }
 
 main a{
     color: purple;
     text-decoration: none;
-    margin: auto;
 }
 
 main a:hover{
@@ -128,12 +123,7 @@ main h2{
     text-align: center;
 }
 
-article{
-    display: block;
-    margin: auto;
-}
-
-div{
+div.video{
     position: relative;
     background-color: var(--cor-02);
     margin: 0px -20px 30px -20px;
@@ -141,7 +131,7 @@ div{
     padding-bottom: 59%;
 }
 
-div > iframe{
+div.video > iframe{
     position: absolute;
     top: 5%;
     left: 5%;
