--- a/style.css
+++ b/style.css
@@ -123,6 +123,13 @@ main h2{
     text-align: center;
 }
 
+img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
 div.video{
     position: relative;
     background-color: var(--cor-02);
